# zkcg-public

./: CHANGELOG.md  CORE_FREEZE.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  SPEC.md  foundry.toml
.github/: FUNDING.yml
api/src/: handler.rs  main.rs  models.rs
common/: Cargo.toml  README.md
common/src/: lib.rs  payout.rs  rwa.rs  types.rs
contracts/: README.md  ZKCGVerifier.sol
contracts/examples/: BaseZKCGDecisionConsumer.sol  PrivateLoanEligibilityGate.sol  RiskGatedVault.sol  RwaTransferGate.sol  VerifiableOracleWithPolicy.sol  ZKCGSignedDecisionGate.sol  ZKCGVerifierConsumer.sol
contracts/interfaces/: IZKCGVerifier.sol
contracts/libraries/: ZKCGDecisionLib.sol
contracts/test/: ZKCGVerifier.t.sol
payout/worker/: Cargo.toml  README.md
payout/worker/src/: main.rs
scripts/: bench.sh  demo_bulk_payout_round.sh  demo_private_loan_onchain.sh  demo_rwa_transfer_onchain.sh  demo_zkme_zkcg_fullstack.sh  deploy_onchain_stack.sh  docker_smoke_api.sh  gpu_smoke.sh  smoke_api.sh
verifier/: Cargo.toml  README.md
verifier/benches/: halo2_verify.rs  zkvm_verify.rs
verifier/examples/: de_fi_lending_sim.rs  de_fi_lending_sim_parallel.rs  defi_lenfin_sim.md  zkvm_attests_halo.md  zkvm_attests_halo2.rs  zkvm_lending_sim.rs
verifier/src/: backend.rs  backend_bench.rs  backend_halo2.rs  backend_stub.rs  backend_zkvm.rs  engine.rs  lib.rs  policy.rs  proof.rs  storage.rs  tests.rs  tests_equivalence.rs  tests_halo2.rs  tests_halo2_kzg.rs  tests_payout.rs  tests_rwa.rs  tests_universal.rs  tests_zkvm.rs
verifier/src/adapters/: halo2.rs  halo2_kzg.rs  mod.rs  zkvm.rs
verifier/src/core/: mod.rs  proof.rs  registry.rs  verifier.rs
