[package]
name = "zkcg-payout-worker"
version = "0.1.0"
edition = "2021"

description = "Self-hosted bulk payout worker for ZKCG"
license = "Apache-2.0"
repository = "https://github.com/MRSKYWAY/ZKCG"
homepage = "https://github.com/MRSKYWAY/ZKCG"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
zkcg-common = { path = "../../common" }
zkcg-halo2-prover = { path = "../../halo2/prover" }
zkcg-verifier = { path = "../../verifier", features = ["zk-halo2"] }
